# TPFinalALP

./: README.md  TPFinalALP.cabal  stack.yaml  test.txt
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/flag-cache/: JuicyPixels-3.2.9.1-Li4q2XV96Ae2qxLLyhstFw  QuickCheck-2.9.2-LvlomhGMxrFBkX1zwiWpQu  StateVar-1.1.0.4-5dJbnTVECtEAhfJXPZKdbO  TPFinalALP-0.1.0.0-5fhSzGdhbW3F7pIKE3HRmn  adjunctions-4.3-A5jfd1yrmaY4DRMJuiquBp  aeson-1.1.2.0-7ssY6fy1GxZGXxTPcOtf2k  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  ansi-wl-pprint-0.6.7.3-A79v826bgPr574HtaZPPqC  attoparsec-0.13.1.0-3ql4hcH9pGfBAlE21oqFTQ  base-compat-0.9.3-KeJp8zYMpcS9WibvTcxU22  base-orphans-0.6-AbJ3lKVXygDCG0eeQEv8Iu  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  basement-0.0.4-5G9Gc8Ht9hD9gydJD2I2TQ  bifunctors-5.4.2-KcF2f75KyQm5BjgJ8WkHCw  bindings-DSL-1.0.23-9846xW4j4xCElj7TO2xbld  byteable-0.1.1-2lU1pexQSLj1KbNO17UifQ  bytes-0.15.3-JnJk9rvpCHsKPq5vbMmKHS  cabal-doctest-1.0.3-424yp4GSQAZHQyNl3c0zus  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  cereal-0.5.4.0-BsAGxfp8yAs3CiRo2E875e  charset-0.3.7.1-8XzlqAFUmfXDSOZRmiDkgy  comonad-5.0.2-Fq9Xy9jdx6uIyJZn00E6Yc  contravariant-1.4-29zF0Im431177ovfbHYCGv  cryptohash-0.11.9-GS5kxCvgHwz5BrOJLsOWZp  cryptonite-0.23-B2QruyompNMGbr9rx9h1sv  data-default-0.7.1.1-Atv1ZD6t1rI1MrH9qSGaQC  data-default-class-0.1.2.0-GsXqKN6o1X9jr0fF5qCVD  data-default-instances-containers-0.0.1-bob6IQGdJq92c061H46zK  data-default-instances-dlist-0.0.1-LBT1sjxIvyd63eC0aI9yNO  data-default-instances-old-locale-0.0.1-9zaGDEmgOixKkmLylWdN5l  distributive-0.5.3-IX4kyVcHAyoH4uFYrsjY1R  dlist-0.8.0.3-BHFBNaw8k6n9WiaUNzoXpk  exceptions-0.8.3-ADEDRATtUrMK1JW4zMQ9U  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  foundation-0.0.17-CL5hY2f92B7EywaUc6v2Lf  free-4.12.4-C2gBQV0m8J42HxqSLTFyVx  hashable-1.2.6.1-2ZLNuHq395GGIHwEHuqZol  inline-c-0.5.6.1-4moQoAsJYTf3C5YPrpBPU3  inline-c-cpp-0.1.0.0-2s9DVDsUzH2I9FLWk6Mzds  integer-logarithms-1.0.2-92lMiWV9mmYAwfMEYgfQ0D  (+31 more)
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/lib/x86_64-osx-ghc-8.0.2/: libHSTPFinalALP-0.1.0.0-5fhSzGdhbW3F7pIKE3HRmn-ghc8.0.2.dylib  libHSTPFinalALP-0.1.0.0-6CW1roJgnU72bzP54NcmHs-ghc8.0.2.dylib  libHSrepa-3.4.1.3-BKe83Ei7qJR1HVE6YMARK4-ghc8.0.2.dylib
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/lib/x86_64-osx-ghc-8.0.2/TPFinalALP-0.1.0.0-5fhSzGdhbW3F7pIKE3HRmn/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/lib/x86_64-osx-ghc-8.0.2/TPFinalALP-0.1.0.0-6CW1roJgnU72bzP54NcmHs/: BlurImage.dyn_hi  BlurImage.hi  Lib.dyn_hi  TestMain.dyn_hi  Threshold.dyn_hi  Threshold.hi
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/lib/x86_64-osx-ghc-8.0.2/opencv-0.0.2.0-4gBe3As27ljUNIMvrGo2x/: OpenCV.dyn_hi  OpenCV.hi
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/lib/x86_64-osx-ghc-8.0.2/opencv-0.0.2.0-4gBe3As27ljUNIMvrGo2x/OpenCV/: Calib3d.dyn_hi  Calib3d.hi  Exception.dyn_hi  Exception.hi  Features2d.dyn_hi  Features2d.hi  HighGui.dyn_hi  HighGui.hi  ImgCodecs.dyn_hi  ImgCodecs.hi  Internal.dyn_hi  Internal.hi  JSON.dyn_hi  JSON.hi  Juicy.dyn_hi  Juicy.hi  Photo.dyn_hi  Photo.hi  TypeLevel.dyn_hi  TypeLevel.hi  Unsafe.dyn_hi  Unsafe.hi  Video.dyn_hi  Video.hi
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/lib/x86_64-osx-ghc-8.0.2/opencv-0.0.2.0-4gBe3As27ljUNIMvrGo2x/OpenCV/Core/: ArrayOps.dyn_hi  ArrayOps.hi  Types.dyn_hi  Types.hi
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/lib/x86_64-osx-ghc-8.0.2/opencv-0.0.2.0-4gBe3As27ljUNIMvrGo2x/OpenCV/ImgProc/: CascadeClassifier.dyn_hi  CascadeClassifier.hi  ColorMaps.dyn_hi  ColorMaps.hi  Drawing.dyn_hi  Drawing.hi  FeatureDetection.dyn_hi  FeatureDetection.hi  GeometricImgTransform.dyn_hi  GeometricImgTransform.hi  ImgFiltering.dyn_hi  ImgFiltering.hi  MiscImgTransform.dyn_hi  MiscImgTransform.hi  ObjectDetection.dyn_hi  ObjectDetection.hi  StructuralAnalysis.dyn_hi  StructuralAnalysis.hi  Types.dyn_hi  Types.hi
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/lib/x86_64-osx-ghc-8.0.2/opencv-0.0.2.0-4gBe3As27ljUNIMvrGo2x/OpenCV/Internal/: Exception.dyn_hi  Exception.hi  ImgCodecs.dyn_hi  ImgCodecs.hi  Mutable.dyn_hi  Mutable.hi
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/lib/x86_64-osx-ghc-8.0.2/opencv-0.0.2.0-4gBe3As27ljUNIMvrGo2x/OpenCV/Video/: MotionAnalysis.dyn_hi  MotionAnalysis.hi
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/pkgdb/: TPFinalALP-0.1.0.0-6CW1roJgnU72bzP54NcmHs.conf  opencv-0.0.2.0-4gBe3As27ljUNIMvrGo2x.conf  package.cache  repa-3.4.1.3-BKe83Ei7qJR1HVE6YMARK4.conf
app/: Main.hi  Main.hs
src/: AST.hs  BlurImage.hs  Eval.hs  ImageRec.hs  PDFMaker.hs  Parser.hs  TestMain.hs  Threshold.hs  Types.hs
test/: test.txt  test1.txt  test2.txt
test/sampleDescr/: sample1.txt
(+162 files in other folders)
